--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   equatable: ^2.0.5
   http: ^0.13.5
   iconsax: ^0.0.8
+  carousel_slider: ^4.1.1
 
 dev_dependencies:
   flutter_test:
