--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^0.13.5
   iconsax: ^0.0.8
   carousel_slider: ^4.1.1
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
